# iTAK

./: .gitignore  README.md  TF_Rule.txt  bug  iTAK.pl  iTAK.py  itak_classify.py  itak_cli.py  itak_pipeline.py  itak_rules.py  itak_runtime.py  itak_sequences.py  itakm.py  pixi.toml  pyproject.toml  requirements.txt  test_seq
.github/workflows/: ci.yml
bioconda/: README.md  SUBMISSION.md
bioconda/recipe/: meta.yaml
database/: GA_table.txt  PK_class_desc.txt  Pkinase_sub_MAK.hmm  Pkinase_sub_WNK1.hmm  TF_Rule.txt  TF_selfbuild.3f.hmm  TF_selfbuild.hmm  TF_selfbuild.sto
database/specific/: NBS-LRR.hmm  NBS-LRR.txt  gnat.hmm  gnat.txt
itak/: __init__.py  classify.py  cli.py  hmmscan.py  pipeline.py  rules.py  runtime.py  sequences.py
scripts/: build_db_release.sh  validate.sh
tests/: test_cli.py  test_helpers.py  test_itakm_parser.py  test_package.py  test_runtime.py  test_sequences.py  test_smoke.py
